add study target species definitions to "species" filter, add new services to "viewer" badge list